--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ yarn_mappings = 1.20.1+build.10
 mod_id = elementary
 mod_name = Elementary
 mod_license = Custom Licence
-mod_version = 0.0.1
+mod_version = 0.0.2
 mod_authors = Zadar
 mod_description = This mod add some ores, entities and others things based on the elements. \
   The mod still in developpement stage, but you can test it. Thank you to report any bug on GitHub.
@@ -34,6 +34,8 @@ mod_description = This mod add some ores, entities and others things based on th
 # Mod - Compatibility
 jei_version = 15.20.0.106
 rei_version = 12.1.785
+architectury_version = 9.2.14
+cloth_config_version = 11.1.136
 
 # Gradle
 org.gradle.jvmargs = -Xmx3G
